# PantherCommander

./: .gitignore  CMakeLists.txt  PantherCommander.pro  README  config.pri  history.txt
exp/: FileContextMenu.cpp  FileContextMenu.h  filecontextmenu.cpp  filecontextmenu.h
src/: AppSettings.cpp  AppSettings.h  Commands.cpp  Commands.h  FileOperationThread.cpp  FileOperationThread.h  FileOperationThread_p.h  FileOperations.h  FileOperationsConfirmationDialog.cpp  FileOperationsConfirmationDialog.h  FileOperationsDialog.cpp  FileOperationsDialog.h  FileOperationsThread.cpp  FileOperationsThread.h  FilePanel.cpp  FilePanel.h  FullView.cpp  FullView.h  MainWindow.cpp  MainWindow.h  MainWindowImpl.cpp  MainWindowImpl.h  PCCommands.cpp  PCCommands.h  PCToolBar.cpp  PCToolBar.h  QFileOperationsConfirmationDialog.cpp  QFileOperationsConfirmationDialog.h  QFileOperationsDialog.cpp  QFileOperationsDialog.h  QFileOperationsThread.cpp  QFileOperationsThread.h  QFilePanel.cpp  QFilePanel.h  QFullView.cpp  QFullView.h  QSelectDiscDialog.cpp  QSelectDiscDialog.h  SelectDiscDialog.cpp  SelectDiscDialog.h  (+38 more)
src/3dparty/qtermwidget/lib/: BlockArray.cpp  BlockArray.h  Character.h  CharacterColor.h  ColorTables.h  Emulation.cpp  Emulation.h  Filter.cpp  Filter.h  History.cpp  History.h  KeyboardTranslator.cpp  KeyboardTranslator.h  Pty.cpp  Pty.h  Screen.cpp  Screen.h  ScreenWindow.cpp  ScreenWindow.h  Session.cpp  Session.h  ShellCommand.cpp  ShellCommand.h  TerminalCharacterDecoder.cpp  TerminalCharacterDecoder.h  TerminalDisplay.cpp  TerminalDisplay.h  Vt102Emulation.cpp  Vt102Emulation.h  k3process.cpp  k3process.h  k3processcontroller.cpp  k3processcontroller.h  konsole_wcwidth.cpp  konsole_wcwidth.h  kpty.cpp  kpty.h  kpty_p.h  qtermwidget.cpp  qtermwidget.h
src/3dparty/qtermwidget/src/: main.cpp
src/3dparty/qzip/: qzip.cpp  qzip.pri  qzipreader_p.h  qzipwriter_p.h
src/3dparty/translationmanager/: config.pri  translationmanager.pri  translationmanager.pro
src/3dparty/translationmanager/include/TranslationManager/: TranslationManager  translationmanager.h
src/3dparty/translationmanager/src/: src.pri  src.pro  translationmanager.cpp  translationmanager.h
src/PantherViewer/: AbstractView.cpp  AbstractView.h  CMakeLists.txt  PantherViewer.cpp  PantherViewer.h  PlainView.cpp  PlainView.h  abstractview.cpp  abstractview.h  pantherviewer.cpp  pantherviewer.h  pantherviewer.pri  plainview.cpp  plainview.h
src/Preferences/: AbstractPreferencesPage.cpp  AbstractPreferencesPage.h  CMakeLists.txt  CommandsDialog.cpp  CommandsDialog.h  CommandsPreference.cpp  CommandsPreference.h  GlobalPreferencePage.cpp  GlobalPreferencePage.h  InterfacePreference.cpp  InterfacePreference.h  PCCommandsDialog.cpp  PCCommandsDialog.h  PCCommandsPreference.cpp  PCCommandsPreference.h  PreferencesDialog.cpp  PreferencesDialog.h  QAbstractPreferencesPage.cpp  QAbstractPreferencesPage.h  QInterfacePreference.cpp  QInterfacePreference.h  QPreferenceGlobal.cpp  QPreferenceGlobal.h  QPreferencesDialog.cpp  QPreferencesDialog.h  QToolButtonPreference.cpp  QToolButtonPreference.h  ToolButtonPreference.cpp  ToolButtonPreference.h  appsettings.cpp  appsettings.h  pccommandsdialog.cpp  pccommandsdialog.h  pccommandspreference.cpp  pccommandspreference.h  preferences.pri  qabstractpreferencespage.cpp  qabstractpreferencespage.h  qinterfacepreference.cpp  qinterfacepreference.h  (+6 more)
src/dialogs/: CMakeLists.txt  CommandEditDialog.cpp  CommandEditDialog.h  CopyMoveDialog.cpp  CopyMoveDialog.h  FindFilesDialog.cpp  FindFilesDialog.h  PCCommandEditDialog.cpp  PCCommandEditDialog.h  PCCopyMoveDialog.cpp  PCCopyMoveDialog.h  dialogs.pri  findfilesdialog.cpp  findfilesdialog.h  pccommandeditdialog.cpp  pccommandeditdialog.h  pccopymovedialog.cpp  pccopymovedialog.h
src/io/: CMakeLists.txt  VolumeInfoProvider.cpp  VolumeInfoProvider.h  VolumeWatcher.cpp  VolumeWatcher_p.h  VolumeWatcher_unix.cpp  VolumeWatcher_unix_p.h  VolumeWatcher_win.cpp  VolumeWatcher_win_p.h  io.pri  volumeinfoprovider.cpp  volumeinfoprovider.h  volumewatcher.cpp  volumewatcher_p.h  volumewatcher_unix.cpp  volumewatcher_unix_p.h  volumewatcher_win.cpp  volumewatcher_win_p.h
src/models/: CMakeLists.txt  FileListModel.cpp  FileListModel.h  FileListModel_p.h  QFileListModel.cpp  QFileListModel.h  QFileListModel_p.h  models.pri  qfilelistmodel.cpp  qfilelistmodel.h  qfilelistmodel_p.h
src/tools/: CMakeLists.txt  DirSorter.cpp  DirSorter.h  dirsorter.cpp  dirsorter.h  tools.pri
src/widgets/: CMakeLists.txt  DriveBar.cpp  DriveBar.h  FileWidget.cpp  FileWidget.h  FileWidget_p.h  FlowLayout.cpp  FlowLayout.h  PCShortcutEdit.cpp  PCShortcutEdit.h  ShortcutEdit.cpp  ShortcutEdit.h  TabBar.cpp  TabBar.h  drivebar.cpp  drivebar.h  filewidget.cpp  filewidget.h  filewidget_p.h  flowlayout.cpp  flowlayout.h  pcshortcutedit.cpp  pcshortcutedit.h  tabbar.cpp  tabbar.h  widgets.pri
tests/zip/: tst_zip.cpp  zip.pro
